2005-02-25	Istvan Varga	<istvan@csounds.com>
	* Engine/entry2.c:
	  added miditempo opcode (returns current tempo of MIDI file
	  at control rate)
	* Engine/insert.c:
	  allow muting MIDI channels (massign to 0) in MIDIinsert()
	* Engine/musmon.c:
	  initialise all MIDI channels before oload()
	  merged MIDI device and file input code (removed sensFMidi)
	  made use of MCHNBLK.insno and MCHNBLK.pgmno more consistent
	* H/csoundCore.h:
	* Top/csound.c:
	  increased MIDI input buffer size
	  changes in MGLOBAL for new MIDI file code
	* H/midifile.h:
	* InOut/midifile.c:
	  new implementation for reading MIDI files (supports multiple tracks)
	  miditempo opcode
	* InOut/midirecv.c:
	  changes for using new MIDI file input
	  removed sensFMidi (both device and file input is done by sensMidi)
	  removed FMidiOpen, vlendatum, Fnxtdeltim, fsexdata, and Rnxtdeltim
	  made use of MCHNBLK.insno and MCHNBLK.pgmno more consistent
	  m_chinsno: allow massign to <= 0 (mutes channel)
	  m_chn_init_all: new function
	  m_getchnl: no longer need to check if channel exists
	* InOut/midisend.c:
	* InOut/pmidi.c:
	  allow sending simple system messages (clock etc.)
	* OOps/midiops.c:
	  allow massign to <= 0 (mutes channel)
	* SConstruct:
	  compile InOut/midifile.c

2005-02-24	Istvan Varga	<istvan@csounds.com>
	* Engine/oload.c:
	* H/csdl.h:
	* H/cs.h:
	* H/csoundCore.h:
	  removed unused or redundant variables (dbfs_to_short,
	  short_to_dbfs, float_to_dbfs, dbfs_to_long, long_to_dbfs)
	* H/soundio.h:
	  removed some unused macros and typedefs
	  moved #defines of sf_read_MYFLT and sf_write_MYFLT here
	  set buffer size defaults more usable for real time audio
	* InOut/libsnd.c:
	  moved #defines of sf_read_MYFLT and sf_write_MYFLT to soundio.h
	  replaced uses of redundant variable float_to_dbfs with e0dbfs
	* InOut/libsnd_u.c:
	* OOps/diskin.c:
	  moved #defines of sf_read_MYFLT and sf_write_MYFLT to soundio.h
	  bug fixes (hopefully) in opening and reading sound files